# ezCV

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.py
configs/: sketch.yml
ezcv/: __init__.py  classpath.py  config.py  exceptions.py  pipeline.py  scanner.py  test_utils.py  typing.py  utils.py
ezcv/config/: PipelineConfig_pb2.py
ezcv/operator/: __init__.py  blur.py  operator.py  parameter.py
ezcv/operator/core/: __init__.py  config.py  factory.py  operator.py  parameter.py  parameter_adapter.py  settings.py
ezcv/operator/implementations/: __init__.py  blur.py  clahe.py  color_space.py  threshold.py
ezcv/pipeline/: __init__.py  context.py  core.py  hooks.py
ezcv/runner/: __init__.py  context.py  core.py
protobuf/: PipelineConfig.proto
tests/: test_config.py  test_pipeline.py  test_pipeline_context.py  test_utils.py  utils.py
tests/core/: test_factory.py
tests/operator/: test_implementations.py  test_operators_registry.py  test_scan_operators.py
tests/operator/core/: test_classpath.py  test_config.py  test_factory.py  test_operator.py  test_parameter.py  test_settings.py
tests/operator/core/implementations/: test_blur.py
tests/operator/implementations/: test_blur.py  test_color_space.py
tests/pipeline/: test_context.py  test_core.py
tests/runner/: test_context.py  test_core.py
