[tool.poetry]
name = "ezcv"
version = "0.1.0"
description = ""
authors = ["Frederico Tommasi Caroli"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
numpy = "^1.21.4"
PyYAML = "^6.0"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
